2000-12-12 John R. Jackson <jrj@purdue.edu>

	* client-src/sendbackup-gnutar.c: Fix regex pattern to accept blanks
	  or tabs.

2000-12-12 John R. Jackson <jrj@purdue.edu>

	* Makefile.am: Work around problem with automake 1.4 not including
	  pkgdata_DATA.
	* docs/Makefile.am: Include RAIT and VTAPE-API in distribution.
	  Work around problem with automake 1.4 not including pkgdata_DATA.
	* tape-src/rait.h: Renamed to rait.h.
	* tape-src/rait.c: Renamed to rait.c.
	* tape-src/output-rait.h: Renamed from rait.h.
	* tape-src/output-rait.c: Renamed from rait.c.
	* tape-src/Makefile.am: Reflect the new rait.[ch] names.
	* tape-src/tapeio.c: Use output-rait.h name.  Minor typo changes.

2000-12-08 Marc Mengel <mengel@fnal.gov>

	* docs/RAIT: New file.
	* docs/VTAPE-API: New file.
	* tape-src/rait.c: New File providing RAIT virtual tape type.
	* tape-src/tapeio.c: Major Surgery.
	  (vtable): New static table of virtual tape types.
	  (fdtable): New static table mapping file descriptors.
	  (tapefd_fsf_ioctl): Renamed tapefd_fsf, with added ioctl argument.
	  (tapefd_rewind_ioctl): Likewise.
	  (tapefd_unload_ioctl): Likewise.
	  (tapefd_weof_ioctl): Likewise.
	  (tapefd_status_ioctl): Likewise.
	  (tape_open): Now is a virtual tape table lookup and call.
	  (tape_access): Now is a switch through virtual tape table.
	  (tape_stat): Likewise.
	  (tapefd_close): Likewise.
	  (tapefd_fsf): Likewise.
	  (tapefd_read): Likewise.
	  (tapefd_rewind): Likewise.
	  (tapefd_resetofs): Likewise.
	  (tapefd_unload): Likewise.
	  (tapefd_status): Likewise.
	  (tapefd_weof): Likewise.
	  (tapefd_write): Likewise.
	  (plain_tape_access): Rename of tape_access.
	  (plain_tape_open): Likewise.
	  (plain_tapefd_read): Likewise.
	  (plain_tape_stat): Likewise.
	  (plain_tapefd_write): Likewise.
	  (plain_tapefd_close): Likewise.
	  (plain_tapefd_fsf): Now calls tapefd_fsf_ioctl with &ioctl().
	  (plain_tapefd_rewind): Likewise.
	  (plain_tapefd_resetofs): Likewise.